Wed Mar 16 21:39:39 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/JIS: update Unicode's notice. [Bug #11844]

Wed Mar 16 20:03:35 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (proc_binding): proc from symbol can not make a binding.
	  [ruby-core:74100] [Bug #12137]

Wed Mar 16 18:42:45 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: Fixed and activated a test for Cherokee.

Wed Mar 16 17:58:56 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: Fixed a logical error.

Wed Mar 16 17:57:34 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: Adding tests for Cherokee.
	  One test not yet working.
	  (with Kimihito Matsui)

Wed Mar 16 15:44:05 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: Adding tests for actual Unicode
	  case mapping. Fixing some aliasing issues.
	  (with Kimihito Matsui)

Tue Mar 15 21:38:28 2016  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_inject): Consider redefinition of Fixnum#+.
	  [ruby-dev:49510] [Bug#12178] Reported by usa.

Tue Mar 15 20:32:57 2016  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_inject): Implement the specialized code for :+ operator
	  for Fixnums.

Tue Mar 15 20:21:01 2016  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_inject): Implement the specialized code for self is an
	  array and a symbol operator is given.

Tue Mar 15 16:29:51 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Eliminating common code.
	  (with Kimihito Matsui)

Tue Mar 15 16:17:09 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Expansion of some code repetition in preparation for
	  elimination of common code pieces.
	  (with Kimihito Matsui)

Tue Mar 15 13:49:23 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Additional macros and code to use mapping data in
	  CaseMappingSpecials array.
	  (with Kimihito Matsui)
